--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,11 @@
 language: elixir
 elixir: '1.9'
+
+services: docker
+  - docker
+
+before_install:
+  - docker build . --target devenv -t peste_dev
+
+script:
+  - docker run peste_env /bin/sh mix test
