--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ services: docker
   - docker
 
 before_install:
-  - docker build . --target detenv -t peste:${TRAVIS_COMMIT}
+  - docker build . --target devenv -t peste:${TRAVIS_COMMIT}
 
 script:
   - docker run peste:${TRAVIS_COMMIT} mix test
