--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ services: docker
   - docker
 
 before_install:
-  - docker build . --target devenv -t peste:${TRAVIS_COMMIT}
+  - docker build . --target devenv -t ronualdo/peste:${TRAVIS_COMMIT}
 
 script:
-  - docker run peste:${TRAVIS_COMMIT} mix test
+  - docker run ronualdo/peste:${TRAVIS_COMMIT} mix test
   - docker push ronualdo/peste:${TRAVIS_COMMIT}
