--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ services: docker
   - docker
 
 before_install:
-  - echor ${DOCKER_PASSWORD} | docker login -u $DOCKER_USERNAME --password-stdin
+  - echo ${DOCKER_PASSWORD} | docker login -u $DOCKER_USERNAME --password-stdin
   - docker build . --target devenv -t ronualdo/peste:${TRAVIS_COMMIT}
 
 script:
