--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.7"
 services:
   peste_api:
     build:
@@ -10,5 +10,5 @@ services:
       - 1.1.1.1
     command: /bin/sh -c "mix deps.get && mix phx.server"
     volumes:
-      - ./peste_api:/app/peste_api
+      - ./apps:/app
 
