--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,11 @@ services:
       - "4444:4000"
     dns:
       - 1.1.1.1
+    environment:
+      TEST_CHAT_ID: ${TEST_CHAT_ID}
+      TEST_TOKEN: ${TEST_TOKEN}
+      PESTE_BOT_TOKEN: ${PESTE_BOT_TOKEN}
     command: /bin/sh -c "mix deps.get && mix phx.server"
     volumes:
-      - ./apps:/app
+      - ./apps:/apps
 
